Fixed a guidebook entry & prepared a model for later

--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -73,7 +73,7 @@
   "modonomicon.runology.guidebook.basics.runic_chisel.page0.text": "While I know about runes, I do not have a method to create them. A gold chisel imbued with Shattered Flow will work.",
   "modonomicon.runology.guidebook.shards.shattered_flow.name": "Shattered Flow",
   "modonomicon.runology.guidebook.shards.shattered_flow.page0.title": "Shattered Flow",
-  "modonomicon.runology.guidebook.shards.shattered_flow.page0.text": "That energy I felt nearby a Shatter... It was powerful, yet dangerous and otherworldly. This energy... I will call it \"Shattered Flow\". I will need a method to move it around - Shattered Focuses and Relays will work!",
+  "modonomicon.runology.guidebook.shards.shattered_flow.page0.text": "That energy I felt nearby a Shatter... It was powerful, yet dangerous and otherworldly. I will need a method to move around this energy I already named \"Shattered Flow\" around - Shattered Focuses and Relays will work!",
   "modonomicon.runology.guidebook.shards.shattered_infuser.name": "Shattered Infuser",
   "modonomicon.runology.guidebook.shards.shattered_infuser.page0.title": "Shattered Infuser",
   "modonomicon.runology.guidebook.shards.shattered_infuser.page0.text": "Now that I am able to move around Shattered Flow, it may be useful to imbue items without having to walk all the way to a Shatter. The Shattered Infuser will allow me to do just this! It can infuse up to 150 Shattered Flow.",
