--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-Changed sounds for power surges
-Fixed a guidebook entry
-Fixed a bug where Shattered Relays would not drop
+Added Shattered Block Shattered Infusion recipe
+Made Shatter Zaps not deal knockback
+Fixed a small issue in a guidebook entry
