Cleaned up code in the ShatteredFlowNetwork class

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,4 @@
 Added Shattered Block Shattered Infusion recipe
 Made Shatter Zaps not deal knockback
 Fixed a small issue in a guidebook entry
+Cleaned up code in the ShatteredFlowNetwork class
