shattered infusion recipe support and tweaks

--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -58,6 +58,7 @@
   "runology.guidebook.runology.basics.entries.test.text1": "This is some random text of the random, i dont know what to type so uh just typing random stuff lol",
   "runology.guidebook.runology.basics.entries.test.text2": "And this... is an ender pearl.",
   "runology.guidebook.runology.basics.entries.test.text3": "FLINT AND STEEEELLLLL",
+  "runology.guidebook.runology.basics.entries.test.text4": "the shattered infusion has infused the shatter",
 
   "runology.guidebook.runology.basics.entries.test2.name": "Test 2",
   "runology.guidebook.runology.basics.entries.test2.text": "diamond pickaxe recipe, not sure what to say, this is just for testing",
