converted some entries

--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -51,64 +51,40 @@
   "modonomicon.runology.guidebook.discover": "I feel a strange and mysterious force... For whatever reason, I feel as if I should imbue a book with this power.",
 
   "runology.guidebook.runology.tabs.basics.name": "Basics",
-  "runology.guidebook.runology.tabs.shards.name": "Longer Tab Name Where I Have No Idea Why I Would Ever Need One This Long",
+  "runology.guidebook.runology.tabs.shards.name": "Shards",
 
 
-  "runology.guidebook.runology.basics.entries.test.name": "Test",
-  "runology.guidebook.runology.basics.entries.test.text1": "This is some random text of the random, i dont know what to type so uh just typing random stuff lol",
-  "runology.guidebook.runology.basics.entries.test.text2": "And this... is an ender pearl.",
-  "runology.guidebook.runology.basics.entries.test.text3": "FLINT AND STEEEELLLLL",
-  "runology.guidebook.runology.basics.entries.test.text4": "the shattered infusion has infused the shatter",
-
-  "runology.guidebook.runology.basics.entries.test2.name": "Test 2",
-  "runology.guidebook.runology.basics.entries.test2.text": "diamond pickaxe recipe, not sure what to say, this is just for testing",
-
-  "runology.guidebook.runology.basics.entries.test3.name": "Test 3",
-  "runology.guidebook.runology.basics.entries.test3.text1": "wow shield item display",
-  "runology.guidebook.runology.basics.entries.test3.text2": "wow shield recipe display",
+  "runology.guidebook.runology.basics.entries.guidebook.name": "Knowledge",
+  "runology.guidebook.runology.basics.entries.guidebook.page1.text": "After imbuing that strange power into a book, I have obtained powerful knowledge. This path may lead me to power! However... I can't help but wonder... What is that voice in my head telling me all of this?",
+  "runology.guidebook.runology.basics.entries.shatters.name": "Shatters",
+  "runology.guidebook.runology.basics.entries.shatters.page1.text": "These holes in space appear to lead to somewhere else. While I may not be able to cross them, I may be able to extract energy from them. I will call this energy \"Shattered Flow\". If I attempt to drain too much Shattered Flow from one, it may become unstable... When unfocused, I can only infuse 20 Shattered Flow into an item, it may be useful to find a better method...",
+  "runology.guidebook.runology.basics.entries.basic_runes.name": "Basic Runes",
+  "runology.guidebook.runology.basics.entries.basic_runes.page1.text": "There are 4 runes I can utilize to manipulate the world: Heat, Frost, Shape, and Motion. Utilizing these 4 is powerful but there has to be more...",
+  "runology.guidebook.runology.basics.entries.basic_runes.page2.text": "The Heat Rune is the simplest to use and manipulates warmth. It may be useful to test the limits of what I can do with this in the future.\n\nThe Frost Rune manipulates coldness, The opposite of the Heat Rune, This rune is simple to use however that doesn't mean it isn't useful.",
+  "runology.guidebook.runology.basics.entries.basic_runes.page3.text": "The Shape Rune manipulates the structure of objects, This rune has great power however is the most difficult to use. It may theoretically be possible to manipulate the structure of molecules however messing with objects on that small of a scale may be difficult.\n\nThe Motion Rune manipulates movement of all forms, This rune is a bit complex but not too difficult to use. It may theoretically be possible to manipulate the movement of time however if it is even possible, it certainly will not be easy.",
+  "runology.guidebook.runology.basics.entries.gold_pillar.name": "Gold Pillar",
+  "runology.guidebook.runology.basics.entries.gold_pillar.page1.text": "Gold can be used to create pillars meant for putting items on. While Gold Pillars will just be decoration for now, they will be useful later.",
+  "runology.guidebook.runology.basics.entries.runic_chisel.name": "Runic Chisel",
+  "runology.guidebook.runology.basics.entries.runic_chisel.page1.text": "While I know about runes, I do not have a method to create them. A gold chisel imbued with Shattered Flow will work.",
+  "runology.guidebook.runology.basics.entries.shatter_reader.name": "Shatter Reader",
+  "runology.guidebook.runology.basics.entries.shatter_reader.page1.text": "With how Shatters output a limited quantity of Shattered Flow and have stability to them, it may be useful to create a tool to let me measure this. With this Reader, I can see a Shatter's Stability, Power, and Output.",
+  "runology.guidebook.runology.basics.entries.shatterstone.name": "Shatterstone",
+  "runology.guidebook.runology.basics.entries.shatterstone.page1.text": "This stone... I have never seen it before! But now that I've discovered a shatter, I see that it's everywhere in the caves... is there more to this world than what I can see?",
+  "runology.guidebook.runology.basics.entries.shatterstone_runes.name": "Shatterstone Runes",
+  "runology.guidebook.runology.basics.entries.shatterstone_runes.page1.text": "Using the Runic Chisel, I can carve runes into Shatterstone, allowing me to channel Shattered Flow properly.",
+  "runology.guidebook.runology.basics.entries.reality_reshaper.name": "Reality Reshaper",
+  "runology.guidebook.runology.basics.entries.reality_reshaper.page1.text": "While Shatters are useful, sometimes they may be created at an inconvenient location. This Reality Reshaper structure will allow me to remove a Shatter and I might even gain something incredibly useful... although... I feel as if it won't go peacefully...",
 
 
   "modonomicon.runology.guidebook.basics.name": "Basics",
   "modonomicon.runology.guidebook.shards.name": "Shards",
 
-  "modonomicon.runology.guidebook.basics.guidebook.name": "Knowledge",
-  "modonomicon.runology.guidebook.basics.guidebook.page0.title": "Knowledge",
-  "modonomicon.runology.guidebook.basics.guidebook.page0.text": "After imbuing that strange power into a book, I have obtained powerful knowledge. This path may lead me to power! However... I can't help but wonder... What is that voice in my head telling me all of this?",
-  "modonomicon.runology.guidebook.basics.shatters.name": "Shatters",
-  "modonomicon.runology.guidebook.basics.shatters.page0.title": "Shatters",
-  "modonomicon.runology.guidebook.basics.shatters.page0.text": "These holes in space appear to lead to somewhere else. While I may not be able to cross them, I may be able to extract energy from them. I will call this energy \"Shattered Flow\". If I attempt to drain too much Shattered Flow from one, it may become unstable... When unfocused, I can only infuse 20 Shattered Flow into an item, it may be useful to find a better method...",
-  "modonomicon.runology.guidebook.basics.basic_runes.name": "Basic Runes",
-  "modonomicon.runology.guidebook.basics.basic_runes.page0.title": "Basic Runes",
-  "modonomicon.runology.guidebook.basics.basic_runes.page0.text": "There are 4 runes I can utilize to manipulate the world: [#](ff5d00)Heat[#](), [#](00d1ff)Frost[#](), [#](00ff00)Shape[#](), and [#](ffd100)Motion[#](). Utilizing these 4 is powerful but there has to be more...",
-  "modonomicon.runology.guidebook.basics.basic_runes.page2.title": "Heat Rune",
-  "modonomicon.runology.guidebook.basics.basic_runes.page2.text": "The [#](ff5d00)Heat Rune[#]() is the simplest to use and manipulates warmth. It may be useful to test the limits of what I can do with this in the future.",
-  "modonomicon.runology.guidebook.basics.basic_runes.page3.title": "Frost Rune",
-  "modonomicon.runology.guidebook.basics.basic_runes.page3.text": "The [#](00d1ff)Frost Rune[#]() manipulates coldness, The opposite of the [#](ff5d00)Heat Rune[#](), This rune is simple to use however that doesn't mean it isn't useful.",
-  "modonomicon.runology.guidebook.basics.basic_runes.page4.title": "Shape Rune",
-  "modonomicon.runology.guidebook.basics.basic_runes.page4.text": "The [#](00ff00)Shape Rune[#]() manipulates the structure of objects, This rune has great power however is the most difficult to use. It may theoretically be possible to manipulate the structure of molecules however messing with objects on that small of a scale may be difficult.",
-  "modonomicon.runology.guidebook.basics.basic_runes.page5.title": "Motion Rune",
-  "modonomicon.runology.guidebook.basics.basic_runes.page5.text": "The [#](ffd100)Motion Rune[#]() manipulates movement of all forms, This rune is a bit complex but not too difficult to use. It may theoretically be possible to manipulate the movement of time however if it is even possible, it certainly will not be easy.",
-  "modonomicon.runology.guidebook.basics.shatterstone.name": "Shatterstone",
-  "modonomicon.runology.guidebook.basics.shatterstone.page0.title": "Shatterstone",
-  "modonomicon.runology.guidebook.basics.shatterstone.page0.text": "This stone... I have never seen it before! But now that I've discovered a shatter, I see that it's everywhere in the caves... is there more to this world than what I can see?",
-  "modonomicon.runology.guidebook.basics.runic_chisel.name": "Runic Chisel",
-  "modonomicon.runology.guidebook.basics.runic_chisel.page0.title": "Runic Chisel",
-  "modonomicon.runology.guidebook.basics.runic_chisel.page0.text": "While I know about runes, I do not have a method to create them. A gold chisel imbued with Shattered Flow will work.",
   "modonomicon.runology.guidebook.shards.shattered_flow.name": "Shattered Flow",
   "modonomicon.runology.guidebook.shards.shattered_flow.page0.title": "Shattered Flow",
   "modonomicon.runology.guidebook.shards.shattered_flow.page0.text": "That energy I felt nearby a Shatter... It was powerful, yet dangerous and otherworldly. I will need a method to move around this energy I already named \"Shattered Flow\" around - Shattered Focuses and Relays will work! Placing a Shattered Focus under a shatter will collect the energy and relays will let me move it around.",
   "modonomicon.runology.guidebook.shards.shattered_infuser.name": "Shattered Infuser",
   "modonomicon.runology.guidebook.shards.shattered_infuser.page0.title": "Shattered Infuser",
   "modonomicon.runology.guidebook.shards.shattered_infuser.page0.text": "Now that I am able to move around Shattered Flow, it may be useful to imbue items without having to walk all the way to a Shatter. The Shattered Infuser will allow me to do just this! It can infuse up to 150 Shattered Flow.",
-  "modonomicon.runology.guidebook.basics.shatter_reader.name": "Shatter Reader",
-  "modonomicon.runology.guidebook.basics.shatter_reader.page0.title": "Shatter Reader",
-  "modonomicon.runology.guidebook.basics.shatter_reader.page0.text": "With how Shatters output a limited quantity of Shattered Flow and have stability to them, it may be useful to create a tool to let me measure this. With this Reader, I can see a Shatter's Stability, Power, and Output.",
-  "modonomicon.runology.guidebook.basics.shatterstone_runes.name": "Shatterstone Runes",
-  "modonomicon.runology.guidebook.basics.shatterstone_runes.page0.title": "Shatterstone Runes",
-  "modonomicon.runology.guidebook.basics.shatterstone_runes.page0.text": "Using the Runic Chisel, I can carve runes into Shatterstone, allowing me to channel Shattered Flow properly.",
-  "modonomicon.runology.guidebook.basics.reality_reshaper.name": "Reality Reshaper",
-  "modonomicon.runology.guidebook.basics.reality_reshaper.page0.title": "Reality Reshaper",
-  "modonomicon.runology.guidebook.basics.reality_reshaper.page0.text": "While Shatters are useful, sometimes they may be created at an inconvenient location. This Reality Reshaper structure will allow me to remove a Shatter and I might even gain something incredibly useful... although... I feel as if it won't go peacefully...",
   "modonomicon.runology.guidebook.shards.shattered_shard.name": "Shattered Shard",
   "modonomicon.runology.guidebook.shards.shattered_shard.page0.title": "Shattered Shard",
   "modonomicon.runology.guidebook.shards.shattered_shard.page0.text": "Shattered Shards... a physical manifestation of shattered flow. Utilizing this may be the key to more advanced magic.",
@@ -124,9 +100,6 @@
   "modonomicon.runology.guidebook.shards.shattered_ingot.name": "Shattered Ingot",
   "modonomicon.runology.guidebook.shards.shattered_ingot.page0.title": "Shattered Ingot",
   "modonomicon.runology.guidebook.shards.shattered_ingot.page0.text": "Gold, while it is a good material, it is not quite as good as it can be. I can make gold channel Shattered Flow better by imbuing it into the gold.",
-  "modonomicon.runology.guidebook.basics.gold_pillar.name": "Gold Pillar",
-  "modonomicon.runology.guidebook.basics.gold_pillar.page0.title": "Gold Pillar",
-  "modonomicon.runology.guidebook.basics.gold_pillar.page0.text": "Gold can be used to create pillars meant for putting items on. While Gold Pillars will just be decoration for now, they will be useful later.",
   "modonomicon.runology.guidebook.shards.power_focus.name": "Power Focus",
   "modonomicon.runology.guidebook.shards.power_focus.page0.title": "Power Focus",
   "modonomicon.runology.guidebook.shards.power_focus.page0.text": "Now that I have a material better than gold for harnessing Shattered Flow, I can create a structure to extract more power from a shatter!",
