--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -74,29 +74,30 @@
   "runology.guidebook.runology.basics.entries.shatterstone_runes.page1.text": "Using the Runic Chisel, I can carve runes into Shatterstone, allowing me to channel Shattered Flow properly.",
   "runology.guidebook.runology.basics.entries.reality_reshaper.name": "Reality Reshaper",
   "runology.guidebook.runology.basics.entries.reality_reshaper.page1.text": "While Shatters are useful, sometimes they may be created at an inconvenient location. This Reality Reshaper structure will allow me to remove a Shatter and I might even gain something incredibly useful... although... I feel as if it won't go peacefully...",
-
+  "runology.guidebook.runology.shards.entries.shattered_shard.name": "Shattered Shard",
+  "runology.guidebook.runology.shards.entries.shattered_shard.page1.text": "Shattered Shards... a physical manifestation of shattered flow. Utilizing this may be the key to more advanced magic.",
+  "runology.guidebook.runology.shards.entries.shattered_flow.name": "Shattered Flow",
+  "runology.guidebook.runology.shards.entries.shattered_flow.page1.text": "That energy I felt nearby a Shatter... It was powerful, yet dangerous and otherworldly. I will need a method to move around this energy I already named \"Shattered Flow\" around - Shattered Focuses and Relays will work! Placing a Shattered Focus under a shatter will collect the energy and relays will let me move it around.",
+  "runology.guidebook.runology.shards.entries.blink_boots.name": "Blink Boots",
+  "runology.guidebook.runology.shards.entries.blink_boots.page1.text": "I can make boots capable of letting me \"blink\" forwards, by pairing a pair of gold boots with Shattered Shards.",
+  "runology.guidebook.runology.shards.entries.shattered_infuser.name": "Shattered Infuser",
+  "runology.guidebook.runology.shards.entries.shattered_infuser.page1.text": "Now that I am able to move around Shattered Flow, it may be useful to imbue items without having to walk all the way to a Shatter. The Shattered Infuser will allow me to do just this! It can infuse up to 150 Shattered Flow.",
+  "runology.guidebook.runology.shards.entries.shatter_coil.name": "Shatter Coil",
+  "runology.guidebook.runology.shards.entries.shatter_coil.page1.text": "Utilizing most of what I have learned so far about Shattered Flow, I have made a device capable of zapping every living thing that comes near it except for those like me. It will cost 10 Shattered Flow to run.",
+  "runology.guidebook.runology.shards.entries.heat_focus.name": "Heat Focus",
+  "runology.guidebook.runology.shards.entries.heat_focus.page1.text": "By mixing the magical properties of blaze powder with a shattered shard along with gold to channel it, I can create a beam of fire capable of smelting batches of anything I throw into it. It will cost 50 Shattered Flow to run.",
+  "runology.guidebook.runology.shards.entries.shattered_ingot.name": "Shattered Ingot",
+  "runology.guidebook.runology.shards.entries.shattered_ingot.page1.text": "Gold, while it is a good material, it is not quite as good as it can be. I can make gold channel Shattered Flow better by imbuing it into the gold.",
+  "runology.guidebook.runology.shards.entries.power_focus.name": "Power Focus",
+  "runology.guidebook.runology.shards.entries.power_focus.page1.text": "Now that I have a material better than gold for harnessing Shattered Flow, I can create a structure to extract more power from a shatter!",
+  "runology.guidebook.runology.shards.entries.greater_power_focus.name": "Greater Power Focus",
+  "runology.guidebook.runology.shards.entries.greater_power_focus.page1.text": "While the Power Focus is good, it can be better. With the Greater Power Focus, I can extract even more power. I feel like it is rather inefficient but I don't know what will go wrong.",
+  "runology.guidebook.runology.shards.entries.weak_stabilizer.name": "Weak Stabilizer",
+  "runology.guidebook.runology.shards.entries.weak_stabilizer.page1.text": "It appears I have attempted to extract too much power from a shatter leading to a Power Surge, I will need a structure to stabilize the shatter.",
 
   "modonomicon.runology.guidebook.basics.name": "Basics",
   "modonomicon.runology.guidebook.shards.name": "Shards",
 
-  "modonomicon.runology.guidebook.shards.shattered_flow.name": "Shattered Flow",
-  "modonomicon.runology.guidebook.shards.shattered_flow.page0.title": "Shattered Flow",
-  "modonomicon.runology.guidebook.shards.shattered_flow.page0.text": "That energy I felt nearby a Shatter... It was powerful, yet dangerous and otherworldly. I will need a method to move around this energy I already named \"Shattered Flow\" around - Shattered Focuses and Relays will work! Placing a Shattered Focus under a shatter will collect the energy and relays will let me move it around.",
-  "modonomicon.runology.guidebook.shards.shattered_infuser.name": "Shattered Infuser",
-  "modonomicon.runology.guidebook.shards.shattered_infuser.page0.title": "Shattered Infuser",
-  "modonomicon.runology.guidebook.shards.shattered_infuser.page0.text": "Now that I am able to move around Shattered Flow, it may be useful to imbue items without having to walk all the way to a Shatter. The Shattered Infuser will allow me to do just this! It can infuse up to 150 Shattered Flow.",
-  "modonomicon.runology.guidebook.shards.shattered_shard.name": "Shattered Shard",
-  "modonomicon.runology.guidebook.shards.shattered_shard.page0.title": "Shattered Shard",
-  "modonomicon.runology.guidebook.shards.shattered_shard.page0.text": "Shattered Shards... a physical manifestation of shattered flow. Utilizing this may be the key to more advanced magic.",
-  "modonomicon.runology.guidebook.shards.blink_boots.name": "Blink Boots",
-  "modonomicon.runology.guidebook.shards.blink_boots.page0.title": "Blink Boots",
-  "modonomicon.runology.guidebook.shards.blink_boots.page0.text": "I can make boots capable of letting me \"blink\" forwards, by pairing a pair of gold boots with Shattered Shards.",
-  "modonomicon.runology.guidebook.shards.shatter_coil.name": "Shatter Coil",
-  "modonomicon.runology.guidebook.shards.shatter_coil.page0.title": "Shatter Coil",
-  "modonomicon.runology.guidebook.shards.shatter_coil.page0.text": "Utilizing most of what I have learned so far about Shattered Flow, I have made a device capable of zapping every living thing that comes near it except for those like me. It will cost 10 Shattered Flow to run.",
-  "modonomicon.runology.guidebook.shards.heat_focus.name": "Heat Focus",
-  "modonomicon.runology.guidebook.shards.heat_focus.page0.title": "Heat Focus",
-  "modonomicon.runology.guidebook.shards.heat_focus.page0.text": "By mixing the magical properties of blaze powder with a shattered shard along with gold to channel it, I can create a beam of fire capable of smelting batches of anything I throw into it. It will cost 50 Shattered Flow to run.",
   "modonomicon.runology.guidebook.shards.shattered_ingot.name": "Shattered Ingot",
   "modonomicon.runology.guidebook.shards.shattered_ingot.page0.title": "Shattered Ingot",
   "modonomicon.runology.guidebook.shards.shattered_ingot.page0.text": "Gold, while it is a good material, it is not quite as good as it can be. I can make gold channel Shattered Flow better by imbuing it into the gold.",
