more clearly explained how to use guidebook

--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -53,7 +53,7 @@
   "runology.guidebook.runology.tabs.shards.name": "Shards",
 
   "runology.guidebook.runology.basics.entries.guidebook.name": "Knowledge",
-  "runology.guidebook.runology.basics.entries.guidebook.page1.text": "After imbuing that strange power into a book, I have obtained powerful knowledge. This path may lead me to power! However... I can't help but wonder... What is that voice in my head telling me all of this?",
+  "runology.guidebook.runology.basics.entries.guidebook.page1.text": "After imbuing that strange power into a book, I have obtained powerful knowledge.\n\nIf I wish to pick up the book, I simply need to sneak and use it.\nThe book is also split into pages which I can switch between the ones I have put together.\n\nHowever... I can't help but wonder... What is that voice in my head telling me all of this?",
   "runology.guidebook.runology.basics.entries.shatters.name": "Shatters",
   "runology.guidebook.runology.basics.entries.shatters.page1.text": "These holes in space appear to lead to somewhere else. While I may not be able to cross them, I may be able to extract energy from them. I will call this energy \"Shattered Flow\". If I attempt to drain too much Shattered Flow from one, it may become unstable... When unfocused, I can only infuse 20 Shattered Flow into an item, it may be useful to find a better method...",
   "runology.guidebook.runology.basics.entries.basic_runes.name": "Basic Runes",
