explained chisel better & increased exit page component hitbox

--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -63,7 +63,7 @@
   "runology.guidebook.runology.basics.entries.gold_pillar.name": "Gold Pillar",
   "runology.guidebook.runology.basics.entries.gold_pillar.page1.text": "Gold can be used to create pillars meant for putting items on. While Gold Pillars will just be decoration for now, they will be useful later.",
   "runology.guidebook.runology.basics.entries.runic_chisel.name": "Runic Chisel",
-  "runology.guidebook.runology.basics.entries.runic_chisel.page1.text": "While I know about runes, I do not have a method to create them. A gold chisel imbued with Shattered Flow will work.",
+  "runology.guidebook.runology.basics.entries.runic_chisel.page1.text": "While I know about runes, I don't have a method to create them. Shatterstone will be a good material for now and a gold chisel imbued with Shattered Flow will work.\nI can cycle through the rune types by using the chisel while sneaking.",
   "runology.guidebook.runology.basics.entries.shatter_reader.name": "Shatter Reader",
   "runology.guidebook.runology.basics.entries.shatter_reader.page1.text": "With how Shatters output a limited quantity of Shattered Flow and have stability to them, it may be useful to create a tool to let me measure this. With this Reader, I can see a Shatter's Stability, Power, and Output.",
   "runology.guidebook.runology.basics.entries.shatterstone.name": "Shatterstone",
