--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -50,7 +50,7 @@
   "book.runology.guidebook.name": "Runic Codex",
 
   "runology.guidebook.runology.tabs.basics.name": "Basics",
-  "runology.guidebook.runology.tabs.shards.name": "Shards",
+  "runology.guidebook.runology.tabs.shattered_flow.name": "Shattered Flow",
 
   "runology.guidebook.runology.basics.entries.guidebook.name": "Knowledge",
   "runology.guidebook.runology.basics.entries.guidebook.page1.text": "After imbuing that strange power into a book, I have obtained powerful knowledge.\n\nIf I wish to pick up the book, I simply need to sneak and use it.\nThe book is also split into pages which I can switch between the ones I have put together.\n\nHowever... I can't help but wonder... What is that voice in my head telling me all of this?",
@@ -71,27 +71,27 @@
   "runology.guidebook.runology.basics.entries.shatterstone_runes.name": "Shatterstone Runes",
   "runology.guidebook.runology.basics.entries.shatterstone_runes.page1.text": "Using the Runic Chisel, I can carve runes into Shatterstone, allowing me to channel Shattered Flow properly.",
   "runology.guidebook.runology.basics.entries.reality_reshaper.name": "Reality Reshaper",
-  "runology.guidebook.runology.basics.entries.reality_reshaper.page1.text": "While Shatters are useful, sometimes they may be created at an inconvenient location. This Reality Reshaper structure will allow me to remove a Shatter and I might even gain something incredibly useful... although... I feel as if it won't go peacefully...",
-  "runology.guidebook.runology.shards.entries.shattered_shard.name": "Shattered Shard",
-  "runology.guidebook.runology.shards.entries.shattered_shard.page1.text": "Shattered Shards... a physical manifestation of shattered flow. Utilizing this may be the key to more advanced magic.",
-  "runology.guidebook.runology.shards.entries.shattered_flow.name": "Shattered Flow",
-  "runology.guidebook.runology.shards.entries.shattered_flow.page1.text": "That energy I felt nearby a Shatter... It was powerful, yet dangerous and otherworldly. I will need a method to move around this energy I already named \"Shattered Flow\" around - Shattered Focuses and Relays will work! Placing a Shattered Focus under a shatter will collect the energy and relays will let me move it around.",
-  "runology.guidebook.runology.shards.entries.blink_boots.name": "Blink Boots",
-  "runology.guidebook.runology.shards.entries.blink_boots.page1.text": "I can make boots capable of letting me \"blink\" forwards, by pairing a pair of gold boots with Shattered Shards.",
-  "runology.guidebook.runology.shards.entries.shattered_infuser.name": "Shattered Infuser",
-  "runology.guidebook.runology.shards.entries.shattered_infuser.page1.text": "Now that I am able to move around Shattered Flow, it may be useful to imbue items without having to walk all the way to a Shatter. The Shattered Infuser will allow me to do just this! It can infuse up to 150 Shattered Flow.",
-  "runology.guidebook.runology.shards.entries.shatter_coil.name": "Shatter Coil",
-  "runology.guidebook.runology.shards.entries.shatter_coil.page1.text": "Utilizing most of what I have learned so far about Shattered Flow, I have made a device capable of zapping every living thing that comes near it except for those like me. It will cost 10 Shattered Flow to run.",
-  "runology.guidebook.runology.shards.entries.heat_focus.name": "Heat Focus",
-  "runology.guidebook.runology.shards.entries.heat_focus.page1.text": "By mixing the magical properties of blaze powder with a shattered shard along with gold to channel it, I can create a beam of fire capable of smelting batches of anything I throw into it. It will cost 50 Shattered Flow to run.",
-  "runology.guidebook.runology.shards.entries.shattered_ingot.name": "Shattered Ingot",
-  "runology.guidebook.runology.shards.entries.shattered_ingot.page1.text": "Gold, while it is a good material, it is not quite as good as it can be. I can make gold channel Shattered Flow better by imbuing it into the gold.",
-  "runology.guidebook.runology.shards.entries.power_focus.name": "Power Focus",
-  "runology.guidebook.runology.shards.entries.power_focus.page1.text": "Now that I have a material better than gold for harnessing Shattered Flow, I can create a structure to extract more power from a shatter!",
-  "runology.guidebook.runology.shards.entries.greater_power_focus.name": "Greater Power Focus",
-  "runology.guidebook.runology.shards.entries.greater_power_focus.page1.text": "While the Power Focus is good, it can be better. With the Greater Power Focus, I can extract even more power. I feel like it is rather inefficient but I don't know what will go wrong.",
-  "runology.guidebook.runology.shards.entries.weak_stabilizer.name": "Weak Stabilizer",
-  "runology.guidebook.runology.shards.entries.weak_stabilizer.page1.text": "It appears I have attempted to extract too much power from a shatter leading to a Power Surge, I will need a structure to stabilize the shatter.",
+  "runology.guidebook.runology.basics.entries.reality_reshaper.page1.text": "While Shatters are useful, sometimes they may be created at an inconvenient location. This Reality Reshaper structure will allow me to remove a Shatter... although... I feel as if it won't go peacefully...",
+  "runology.guidebook.runology.shattered_flow.entries.shattered_shard.name": "Shattered Shard",
+  "runology.guidebook.runology.shattered_flow.entries.shattered_shard.page1.text": "Shattered Shards... a physical manifestation of shattered flow. Utilizing this may be the key to more advanced magic.",
+  "runology.guidebook.runology.shattered_flow.entries.shattered_flow.name": "Shattered Flow",
+  "runology.guidebook.runology.shattered_flow.entries.shattered_flow.page1.text": "That energy I felt nearby a Shatter... It was powerful, yet dangerous and otherworldly. I will need a method to move around this energy I already named \"Shattered Flow\" around - Shattered Focuses and Relays will work! Placing a Shattered Focus under a shatter will collect the energy and relays will let me move it around.",
+  "runology.guidebook.runology.shattered_flow.entries.blink_boots.name": "Blink Boots",
+  "runology.guidebook.runology.shattered_flow.entries.blink_boots.page1.text": "I can make boots capable of letting me \"blink\" forwards, by pairing a pair of gold boots with Shattered Shards.",
+  "runology.guidebook.runology.shattered_flow.entries.shattered_infuser.name": "Shattered Infuser",
+  "runology.guidebook.runology.shattered_flow.entries.shattered_infuser.page1.text": "Now that I am able to move around Shattered Flow, it may be useful to imbue items without having to walk all the way to a Shatter. The Shattered Infuser will allow me to do just this! It can infuse up to 150 Shattered Flow.",
+  "runology.guidebook.runology.shattered_flow.entries.shatter_coil.name": "Shatter Coil",
+  "runology.guidebook.runology.shattered_flow.entries.shatter_coil.page1.text": "Utilizing most of what I have learned so far about Shattered Flow, I have made a device capable of zapping every living thing that comes near it except for those like me. It will cost 10 Shattered Flow to run.",
+  "runology.guidebook.runology.shattered_flow.entries.heat_focus.name": "Heat Focus",
+  "runology.guidebook.runology.shattered_flow.entries.heat_focus.page1.text": "By mixing the magical properties of blaze powder with a shattered shard along with gold to channel it, I can create a beam of fire capable of smelting batches of anything I throw into it. It will cost 50 Shattered Flow to run.",
+  "runology.guidebook.runology.shattered_flow.entries.shattered_ingot.name": "Shattered Ingot",
+  "runology.guidebook.runology.shattered_flow.entries.shattered_ingot.page1.text": "Gold, while it is a good material, it is not quite as good as it can be. I can make gold channel Shattered Flow better by imbuing it into the gold.",
+  "runology.guidebook.runology.shattered_flow.entries.power_focus.name": "Power Focus",
+  "runology.guidebook.runology.shattered_flow.entries.power_focus.page1.text": "Now that I have a material better than gold for harnessing Shattered Flow, I can create a structure to extract more power from a shatter!",
+  "runology.guidebook.runology.shattered_flow.entries.greater_power_focus.name": "Greater Power Focus",
+  "runology.guidebook.runology.shattered_flow.entries.greater_power_focus.page1.text": "While the Power Focus is good, it can be better. With the Greater Power Focus, I can extract even more power. I feel like it is rather inefficient but I don't know what will go wrong.",
+  "runology.guidebook.runology.shattered_flow.entries.weak_stabilizer.name": "Weak Stabilizer",
+  "runology.guidebook.runology.shattered_flow.entries.weak_stabilizer.page1.text": "It appears I have attempted to extract too much power from a shatter leading to a Power Surge, I will need a structure to stabilize the shatter.",
 
   "advancements.runology.runology.title": "Runology",
   "advancements.runology.runology.description": "Runes powered by another world...",
