--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -27,6 +27,11 @@
   "block.runology.heat_focus": "Heat Focus",
   "block.runology.shattered_block": "Shattered Block",
   "block.runology.reality_focus": "Reality Focus",
+  "block.runology.otherworldly_stone": "Otherworldly Stone",
+  "block.runology.otherworldly_dirt": "Otherworldly Dirt",
+  "block.runology.otherworldly_grass_block": "Otherworldly Grass",
+  "block.runology.short_otherworldly_grass": "Short Otherworldly Grass",
+  "block.runology.tall_otherworldly_grass": "Tall Otherworldly Grass",
 
   "item.runology.gold_chisel": "Gold Chisel",
   "item.runology.runic_chisel": "Runic Chisel",
@@ -40,6 +45,7 @@
   "item.runology.blink_boots.tooltip_2": "Holding %1$s will show where the target position will be",
   "item.runology.shattered_ingot": "Shattered Ingot",
   "item.runology.guidebook": "Runic Codex",
+  "item.runology.shatter_explarder": "Shatter Explarder",
 
   "entity.runology.shatter_zap": "Shatter Zap",
   "entity.runology.runic_codex": "Runic Codex",
