--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -32,6 +32,8 @@
   "block.runology.otherworldly_grass_block": "Otherworldly Grass",
   "block.runology.short_otherworldly_grass": "Short Otherworldly Grass",
   "block.runology.tall_otherworldly_grass": "Tall Otherworldly Grass",
+  "block.runology.otherworldly_sand": "Otherworldly Sand",
+  "block.runology.otherworldly_sandstone": "Otherworldly Sandstone",
 
   "item.runology.gold_chisel": "Gold Chisel",
   "item.runology.runic_chisel": "Runic Chisel",
