--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -134,5 +134,6 @@
   "subtitle.runology.block.heat_focus.working": "Heat focus crackles",
   "subtitle.runology.block.heat_focus.finish": "Heat focus finishes",
   "subtitle.runology.shattered_flow_network.surge.start": "Surge starts",
-  "subtitle.runology.shattered_flow_network.surge.end": "Surge ends"
+  "subtitle.runology.shattered_flow_network.surge.end": "Surge ends",
+  "subtitle.runology.block.shatter.unstable": "Shatter destabilizing"
 }
