--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -34,6 +34,7 @@
   "block.runology.tall_otherworldly_grass": "Tall Otherworldly Grass",
   "block.runology.otherworldly_sand": "Otherworldly Sand",
   "block.runology.otherworldly_sandstone": "Otherworldly Sandstone",
+  "block.runology.otherworldly_energy": "Otherworldly Energy",
 
   "item.runology.gold_chisel": "Gold Chisel",
   "item.runology.runic_chisel": "Runic Chisel",
@@ -48,10 +49,14 @@
   "item.runology.shattered_ingot": "Shattered Ingot",
   "item.runology.guidebook": "Runic Codex",
   "item.runology.shatter_explarder": "Shatter Explarder",
+  "item.runology.empty_otherworld_bomb": "Empty Otherworld Bomb",
+  "item.runology.otherworld_bomb": "Otherworld Bomb",
 
   "entity.runology.shatter_zap": "Shatter Zap",
   "entity.runology.runic_codex": "Runic Codex",
   "entity.runology.runic_codex_entry": "Runic Codex Entry",
+  "entity.runology.otherworldly_energy": "Otherworldly Energy",
+  "entity.runology.otherworld_bomb": "Otherworld Bomb",
 
   "creativemodetab.runology": "Runology",
 
@@ -59,6 +64,7 @@
 
   "runology.guidebook.runology.tabs.basics.name": "Basics",
   "runology.guidebook.runology.tabs.shattered_flow.name": "Shattered Flow",
+  "runology.guidebook.runology.tabs.other_side.name": "The Other Side",
 
   "runology.guidebook.runology.basics.entries.guidebook.name": "Knowledge",
   "runology.guidebook.runology.basics.entries.guidebook.page1.text": "After imbuing that strange power into a book, I have obtained powerful knowledge.\n\nIf I wish to pick up the book, I simply need to sneak and use it.\nThe book is also split into pages which I can switch between the ones I have put together.\n\nHowever... I can't help but wonder... What is that voice in my head telling me all of this?",
@@ -78,8 +84,8 @@
   "runology.guidebook.runology.basics.entries.shatterstone.page1.text": "This stone... I have never seen it before! But now that I've discovered a shatter, I see that it's everywhere in the caves... is there more to this world than what I can see?",
   "runology.guidebook.runology.basics.entries.shatterstone_runes.name": "Shatterstone Runes",
   "runology.guidebook.runology.basics.entries.shatterstone_runes.page1.text": "Using the Runic Chisel, I can carve runes into Shatterstone, allowing me to channel Shattered Flow properly.",
-  "runology.guidebook.runology.basics.entries.reality_reshaper.name": "Reality Reshaper",
-  "runology.guidebook.runology.basics.entries.reality_reshaper.page1.text": "While Shatters are useful, sometimes they may be created at an inconvenient location. This Reality Reshaper structure will allow me to remove a Shatter... although... I feel as if it won't go peacefully...",
+  "runology.guidebook.runology.basics.entries.energy_destabilizer.name": "Energy Destabilizer",
+  "runology.guidebook.runology.basics.entries.energy_destabilizer.page1.text": "It seems that with instability, shattered flow comes through differently, I wonder... what would happen if I destabilized it far beyond reason? Though, it is likely not a good idea to attempt this on a shatter I would like to keep.",
   "runology.guidebook.runology.shattered_flow.entries.shattered_shard.name": "Shattered Shard",
   "runology.guidebook.runology.shattered_flow.entries.shattered_shard.page1.text": "Shattered Shards... a physical manifestation of shattered flow. Utilizing this may be the key to more advanced magic.",
   "runology.guidebook.runology.shattered_flow.entries.shattered_flow.name": "Shattered Flow",
@@ -100,6 +106,9 @@
   "runology.guidebook.runology.shattered_flow.entries.greater_power_focus.page1.text": "While the Power Focus is good, it can be better. With the Greater Power Focus, I can extract even more power. I feel like it is rather inefficient but I don't know what will go wrong.",
   "runology.guidebook.runology.shattered_flow.entries.weak_stabilizer.name": "Weak Stabilizer",
   "runology.guidebook.runology.shattered_flow.entries.weak_stabilizer.page1.text": "It appears I have attempted to extract too much power from a shatter leading to a Power Surge, I will need a structure to stabilize the shatter.",
+  "runology.guidebook.runology.other_side.entries.other_side.name": "The Other Side",
+  "runology.guidebook.runology.other_side.entries.other_side.page1.text": "After destabilizing that shatter, it exploded, however this explosion was the key to finally reaching the other side! Unfortunately, currently I am unable to make anything that lets me visit, all I can do is bring objects here.",
+  "runology.guidebook.runology.other_side.entries.other_side.page2.text": "Needing to explode a shatter every time I want to grab matter from the other world would be expensive, thankfully it should be rather simple to create something to take care of that. I will need to charge them with what gets left behind by the shatters though.",
 
   "advancements.runology.runology.title": "Runology",
   "advancements.runology.runology.description": "Runes powered by another world...",
@@ -111,6 +120,8 @@
   "advancements.runology.shattered_shard.description": "Obtain a Shattered Shard",
   "advancements.runology.surge.title": "Power Surge",
   "advancements.runology.surge.description": "Experience a power surge across your Shattered Flow network",
+  "advancements.runology.explode_shatter.title": "Explard.",
+  "advancements.runology.explode_shatter.description": "Destabilize a shatter to the point of explosion",
 
   "emi.category.runology.shatter_infusion": "Shatter Infusion",
   "emi.category.runology.shatter_infusion.cost": "%1$s Shattered Flow",
@@ -136,5 +147,6 @@
   "subtitle.runology.shattered_flow_network.surge.start": "Surge starts",
   "subtitle.runology.shattered_flow_network.surge.end": "Surge ends",
   "subtitle.runology.block.shatter.unstable": "Shatter destabilizing",
-  "subtitle.runology.block.shatter.explode": "Shatter explodes"
+  "subtitle.runology.block.shatter.explode": "Shatter explodes",
+  "subtitle.runology.item.otherworld_bomb.throw": "Otherworld Bomb flies"
 }
