otherworldly energy changes

--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -148,5 +148,6 @@
   "subtitle.runology.shattered_flow_network.surge.end": "Surge ends",
   "subtitle.runology.block.shatter.unstable": "Shatter destabilizing",
   "subtitle.runology.block.shatter.explode": "Shatter explodes",
-  "subtitle.runology.item.otherworld_bomb.throw": "Otherworld Bomb flies"
+  "subtitle.runology.item.otherworld_bomb.throw": "Otherworld Bomb flies",
+  "subtitle.runology.block.otherworldly_energy.infuse": "Otherworldly Energy infuses"
 }
