zh_cn lang update
Co-authored-by: ZetaY <34602681+ZHAY10086@users.noreply.github.com>

--- a/src/main/resources/assets/runology/lang/zh_cn.json
+++ b/src/main/resources/assets/runology/lang/zh_cn.json
@@ -85,7 +85,7 @@
   "runology.guidebook.runology.basics.entries.shatterstone_runes.name": "界隙石符文",
   "runology.guidebook.runology.basics.entries.shatterstone_runes.page1.text": "我可以用符文凿子在界隙石上雕凿符文，以便传导裂界能流。",
   "runology.guidebook.runology.basics.entries.energy_destabilizer.name": "能量解稳阵",
-  "runology.guidebook.runology.basics.entries.energy_destabilizer.page1.text": "尽管界隙很有用，但它们所在的位置可能不太方便。能量解稳阵结构可以合上界隙……然而……我有种预感，界隙闭合时肯定不会很安静……",
+  "runology.guidebook.runology.basics.entries.energy_destabilizer.page1.text": "看来随着不稳定性的加剧，裂界能流的传导方式会变得不同。我在想……如果将不稳定度推至极限会发生什么？不过，最好别对想维持的界隙干这种事。",
   "runology.guidebook.runology.shattered_flow.entries.shattered_shard.name": "裂界碎片",
   "runology.guidebook.runology.shattered_flow.entries.shattered_shard.page1.text": "裂界碎片……有实体的裂界能流。它可能是通向更高级魔法的关键所在。",
   "runology.guidebook.runology.shattered_flow.entries.shattered_flow.name": "裂界能流",
